--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <h1>G3 Architects</h1>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
