--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>G3 Architects</h1>
+            <h3 class="nav-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -19,9 +19,37 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New
+                    Group of Architects
+                </h1>
+                <p class="banner-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
-
+        <section class="team-container">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content-container">
+                <h3 class="team-content-title">Quick list <span class="name-dark">of Our</span> <span
+                        class="name-highlight">Features</span></h3>
+                <p class="team-content-description">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
