--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header section -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -34,6 +35,7 @@
         </div>
     </header>
     <main>
+        <!-- main section -->
         <section class="team-container">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="">
@@ -50,9 +52,87 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- Features area -->
+        <section class="features">
+            <div class="features-content">
+                <h3 class="features-content-title">Features you will <br> love & enjoy</h3>
+                <p class="feature-content-description">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    which don't look even</p>
+                <div class="features-content-item">
+                    <h5 class="item-title">Dexktop & Mobile Version</h5>
+                    <p class="item-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-content-item">
+                    <h5 class="item-title">Drag & Drop Builder</h5>
+                    <p class="item-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-content-item">
+                    <h5 class="item-title">Awesome Modern Design</h5>
+                    <p class="item-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-content-item">
+                    <h5 class="item-title">Super Easy to Edit</h5>
+                    <p class="item-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="featurs-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-experience">10+Years <br>
+                    <small>Experience</small>
+                </button>
+            </div>
+        </section>
+        <!-- Some facts area -->
+        <section class="some-facts">
+            <h3 class="fact-title">Some Facts</h3>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available,<br> but the
+                majority have suffered alteration.</p>
+            <div class="awards-facts">
+                <div class="fact-issue">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="fact-stats">54</h3>
+                    <p class="fact-title">Awards Winnings</p>
+                </div>
+                <div class="fact-issue">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="fact-stats">1458</h3>
+                    <p class="fact-title">Project Finished</p>
+                </div>
+                <div class="fact-issue">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="fact-stats">590</h3>
+                    <p class="fact-title">Clients Worked</p>
+                </div>
+                <div class="fact-issue">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="fact-stats">22578</h3>
+                    <p class="fact-title">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- Sponsors area -->
+        <section class="sponsors">
+            <div class="sponsor-content">
+                <h3 class="sponsor-title">Our Sponspors</h3>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the <br>
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-icons">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
-
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
